Update!
Now you can list devices and more :D